[gd_scene load_steps=2 format=3 uid="uid://ctobkcw65rys3"]

[ext_resource type="Script" path="res://scripts/placement_tile.gd" id="1_yk68p"]

[node name="Panel" type="Panel"]
custom_minimum_size = Vector2(90, 90)
mouse_filter = 2
script = ExtResource("1_yk68p")

[node name="BackgroundTile" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3

[node name="EncounterTypeIcon" type="TextureRect" parent="BackgroundTile"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3
stretch_mode = 5

[node name="IndexLabel" type="Label" parent="BackgroundTile/EncounterTypeIcon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 23.0
offset_top = 40.0
offset_right = 63.0
offset_bottom = 63.0
